<resources>
    <string name="app_name">SerrAlertas</string>
    <string name="descriptor_spinner_perfiles">Seleccione un perfil</string>
    <string name="options_bluetooth">Bluetooth</string>
    <string name="options_notifications">Notificaciones</string>
    <string name="options_profiles">Administrar perfiles</string>
    <string name="lbl_btn_connect_bt">Conectar dispositivo</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecciona_pictograma">Seleccionar pictograma</string>
    <string name="btn_seleccion_color">Selección color</string>
    <string name="seleccion_color_alerta">Color de fondo</string>
    <string name="btn_seleccion_audio">Selecciona un sonido</string>
    <string name="seleccion_audio">Sonido</string>
    <string name="texto_alerta">Texto</string>
    <string name="selecciona_picto">Pictograma</string>
    <string name="titulo_nuevo_perfil">Nuevo perfil</string>
    <string name="hint_nuevo_perfil">Nombre del perfil</string>
    <string name="btn_cancelar_nuevo_perfil">Cancelar</string>
    <string name="btn_agregar_nuevo_perfil">Agregar</string>
    <string name="description_fab_nuevo_perfil">Agregar nuevo perfil</string>
    <string name="lbl_btn_disconnect_bt">Desconectar dispositivo</string>
    <string name="borrar_perfil">Borrar perfil</string>
    <string name="btn_cerrar_alerta">Cerrar</string>
    <string name="btn_ver_alertas">Ver alertas</string>
    <string name="afirmativo">Afirmativo</string>
    <string name="negativo">Negativo</string>
    <string name="agua">Agua</string>
    <string name="banyo">Baño</string>
    <string name="reproducir">Reproducir</string>
    <string name="seleccionar_audio">Seleccionar audio</string>
</resources>